testsuite/gnatprove/tests/SB21-007__crash/test.out
a-cofuve.ads:96:06: info: data dependencies proved, in instantiation at a-cfdlli.ads:75, in instantiation at database.adb:16
database.adb:16:04: error: "Item" is not writable
database.adb:16:04: error: instantiation error at a-cfdlli.ads:75
database.adb:16:04: error: instantiation error at a-cofuve.ads:339
database.adb:16:04: error: object was declared as not writable at a-cofuve.ads:339, instance at a-cfdlli.ads:75, instance at line 16
database.adb:21:04: info: initialization of "Database" proved
database.adb:22:04: info: initialization of "DB_Model" proved
database.ads:23:04: error: "Item" is not writable
database.ads:23:04: error: instantiation error at a-cofuse.ads:256
database.ads:23:04: error: object was declared as not writable at a-cofuse.ads:256, instance at line 23
gnatprove: error during flow analysis and proof
